force-app/main/default/objects/Suggested_Course_Offering__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Course_Offering__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_Calendar_Description__c</fullName>
        <formula>Course_Offering__r.Admission_Calendar_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Calendar Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <formula>Course_Offering__r.Admission_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <formula>TEXT(Course_Offering__r.Attendance_Mode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <formula>TEXT(Course_Offering__r.Attendance_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Data_Processing__c</fullName>
        <label>Bulk Data Processing</label>
        <referenceTo>Bulk_Data_Processing__c</referenceTo>
        <relationshipLabel>Suggested Course Offerings</relationshipLabel>
        <relationshipName>Suggested_Course_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <formula>Course_Offering__r.Calendar__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Type__c</fullName>
        <formula>TEXT(Course_Offering__r.Citizenship_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Citizenship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Period__c</fullName>
        <formula>Course_Offering__r.Commencement_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commencement Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course_Offering__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>Suggested Course Offerings</relationshipLabel>
        <relationshipName>Suggested_Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Version_Number__c</fullName>
        <formula>Course_Offering__r.Course_Version_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <formula>Course_Offering__r.Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <formula>Course_Offering__r.Unit_Set_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Set Code</label>
        <type>Text</type>
    </fields>
    <label>Suggested Course Offering</label>
    <nameField>
        <label>Suggested Course Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggested Course Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Open_Opportunity</fullName>
        <active>true</active>
        <description>can&apos;t update record if open opportunity</description>
        <errorConditionFormula>AND(
   ISCHANGED ( Primary__c ),
   OR(
     ISPICKVAL(Bulk_Data_Processing__r.Status__c, &quot;Processing Offer&quot;),
     ISPICKVAL(Bulk_Data_Processing__r.Status__c, &quot;Offer Created&quot;),
     ISPICKVAL(Bulk_Data_Processing__r.Status__c, &quot;Offer Error&quot;),
     ISPICKVAL(Bulk_Data_Processing__r.Status__c, &quot;Completed&quot;)
   )
)</errorConditionFormula>
        <errorMessage>Active offer has been detected for the BDP record. Please close the active offer in Opportunity or Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Existing_Primary</fullName>
        <active>true</active>
        <description>One one primary suggested course offering is allow at a time</description>
        <errorConditionFormula>AND( 
Primary__c,
ISCHANGED(Primary__c),
Bulk_Data_Processing__r.Primary_Course_Offering__c &gt;= 1
)</errorConditionFormula>
        <errorMessage>Please ensure that the existing Transfer To ACP is updated accordingly before setting a new primary Suggested Course Offering record.</errorMessage>
    </validationRules>
</CustomObject>